[tool.poetry]
name = "wfdb"
version = "4.1.0"
description = "The WFDB Python package: tools for reading, writing, and processing physiologic signals and annotations."
authors = ["The Laboratory for Computational Physiology <contact@physionet.org>"]
readme = "README.md"
homepage = "https://github.com/MIT-LCP/wfdb-python/"
repository = "https://github.com/MIT-LCP/wfdb-python/"
documentation = "https://wfdb.readthedocs.io/"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
numpy = ">=1.10.1"
scipy = ">=1.0.0"
pandas = ">=1.3.0"
SoundFile = ">=0.10.0"
matplotlib = ">=3.2.2"
requests = ">=2.8.1"
pytest = {version = ">=7.1.1", optional = true}
pytest-xdist = {version = ">=2.5.0", optional = true}
pylint = {version = ">=2.13.7", optional = true}
black = {version = ">=22.3.0", optional = true}
Sphinx = {version = ">=4.5.0", optional = true}

[tool.poetry.extras]
dev = ["pytest", "pytest-xdist", "pylint", "black", "Sphinx"]

# Do NOT use [tool.poetry.dev-dependencies]. See: https://github.com/python-poetry/poetry/issues/3514

[tool.black]
line-length = 80
target-version = ['py37']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
