[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wfdb"
description = "The WFDB Python package: tools for reading, writing, and processing physiologic signals and annotations."
authors = [{name = "The Laboratory for Computational Physiology", email = "contact@physionet.org"}]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "numpy >= 1.10.1, < 2.0.0",
    "scipy >= 1.0.0",
    "pandas >= 1.3.0",
    "soundfile >= 0.10.0",
    "matplotlib >= 3.2.2",
    "requests >= 2.8.1",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest >= 7.1.1",
    "pytest-xdist >= 2.5.0",
    "pytest-env >= 1.1.5",
    "pylint >= 2.13.7",
    "black >= 22.3.0",
    "sphinx >= 4.5.0",
]

[project.urls]
homepage = "https://github.com/MIT-LCP/wfdb-python/"
repository = "https://github.com/MIT-LCP/wfdb-python/"
documentation = "https://wfdb.readthedocs.io/"

[tool.black]
line-length = 80
target-version = ['py37']

[tool.hatch.build.targets.sdist]
exclude = [
    "/tests",
    "/sample-data",
    "/demo-img.png",
    "/demo.ipynb",
]

[tool.hatch.version]
path = "wfdb/version.py"
